# PaTSEmb

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: discretization.rst  pattern_based_embedding.rst  pattern_mining.rst  postprocess.rst  semantic_segmentation.rst  utils.rst
docs/getting_started/: examples.rst  installation.rst
notebooks/: demo.ipynb  examples.ipynb
patsemb/discretization/: Discretizer.py  SAXDiscretizer.py  __init__.py
patsemb/pattern_based_embedding/: PatternBasedEmbedder.py  __init__.py  visualization.py
patsemb/pattern_mining/: PatternMiner.py  __init__.py
patsemb/pattern_mining/SPMF/: NOSEP.py  QCSP.py  SPMF.py  __init__.py
patsemb/postprocess/: Postprocessor.py  Smoother.py  __init__.py
patsemb/semantic_segmentation/: LogisticRegressionSegmentor.py  ProbabilisticSemanticSegmentor.py  __init__.py
patsemb/utils/: __init__.py  handle_datetime.py
patsemb/visualization/: __init__.py  visualization.py
tests/discretization/: test_SAXDiscretization.py  test_SaxDiscretization.py
tests/pattern_based_embedding/: test_PatternBasedEmbedder.py  test_visualization.py
tests/pattern_mining/SPMF/: test_NOSEP.py  test_QCSP.py  test_SPMF.py
tests/postprocess/: test_Smoother.py
tests/semantic_segmentation/: test_LogisticRegressionSegmentor.py
tests/utils/: test_handle_datetime.py
